<resources>
    <string name="app_name">TPApplicationMobile</string>
    <string name="textView_offline">Offline</string>
    <string name="button_1_vs_ia">1 vs. IA</string>
    <string name="button_1_vs_1">1 vs. 1</string>
    <string name="button_team_a_vs_team_b">Team A vs. Team B</string>
    <string name="textView_online">Online</string>
    <string name="button_1_vs_1_online">1 vs. 1 Online</string>
    <string name="tvEquipe">Team : </string>
    <string name="tvJoueur">Player : </string>
    <string name="tvVies">Lifes : </string>
    <string name="tvScore">Score : </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beer_name_on_list">Beer name</string>
    <string name="beer_tagline">Beer Tagline</string>
    <string name="legend_abv">Alcohol By Volume (ABV)</string>
    <string name="abv">9,8°</string>
    <string name="legend_ibu">International Bitterness Units scale (IBU)</string>
    <string name="ibu">15</string>
    <string name="beer_description">Cette bière est faite à partir de ça et de ça et de ça et même de ça parce qu\'elle est vraiment super super bien d\'abord</string>
    <string name="beer_name">Le nom de la bière</string>
    <string name="beer_alc">Alc. 6%</string>
</resources>
