<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.epulapp.tpapplicationmobile.JeuActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/heightTvLabel"
            android:text="@string/tvEquipe"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/tvEquipe"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/heightTvLabel"
            android:text="-"
            app:layout_constraintLeft_toRightOf="@+id/tv1"/>

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/heightTvLabel"
            android:text="@string/tvJoueur"
            app:layout_constraintTop_toBottomOf="@+id/tv1"/>

        <TextView
            android:id="@+id/tvJoueur"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/heightTvLabel"
            android:text="-"
            app:layout_constraintLeft_toRightOf="@+id/tv2"
            app:layout_constraintTop_toBottomOf="@+id/tvEquipe"/>

        <TextView
            android:id="@+id/tvVies"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/heightTvLabel"
            android:text="-"
            app:layout_constraintRight_toLeftOf="parent"/>

        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/heightTvLabel"
            android:text="@string/tvVies"
            app:layout_constraintRight_toLeftOf="@+id/tvVies"/>

        <TextView
            android:id="@+id/tvScore"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/heightTvLabel"
            android:text="-"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvVies"/>

        <TextView
            android:id="@+id/tv4"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/heightTvLabel"
            android:text="@string/tvScore"
            app:layout_constraintRight_toLeftOf="@+id/tvScore"
            app:layout_constraintTop_toBottomOf="@+id/tv3"/>

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="This is the question"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintLeft_toLeftOf="@+id/tv1"
            app:layout_constraintRight_toRightOf="@+id/tvVies"
            app:layout_constraintBottom_toTopOf="@+id/sbVolume"/>

        <SeekBar
            android:id="@+id/sbVolume"
            android:layout_width="@dimen/widthSbVolume"
            android:layout_height="@dimen/heightSbVolume"
            app:layout_constraintTop_toBottomOf="@+id/tv3"
            app:layout_constraintLeft_toLeftOf="@+id/tv1"
            app:layout_constraintRight_toRightOf="@+id/tvVies"
            android:layout_marginTop="@dimen/margin130"/>

        <TextView
            android:id="@+id/tvValeur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Valeur : 5 pts "
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintTop_toBottomOf="@+id/sbVolume"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/margin20"/>

        <ProgressBar
            android:id="@+id/pbTemps"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvValeur"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/margin40"
            app:layout_constraintHorizontal_bias="1.0"/>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/clButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin20"
            app:layout_constraintTop_toBottomOf="@+id/pbTemps">

            <GridLayout
                android:layout_width="340dp"
                android:layout_height="140dp"
                android:columnCount="2"
                android:rowCount="2">

                <Button
                    android:id="@+id/button1"
                    android:layout_gravity="left|top"
                    android:layout_width="170dp"
                    android:layout_height="70dp"
                    android:text="Button" />

                <Button
                    android:id="@+id/button2"
                    android:layout_gravity="left|top"
                    android:layout_width="170dp"
                    android:layout_height="70dp"
                    android:text="Button" />

                <Button
                    android:id="@+id/button3"
                    android:layout_gravity="left|top"
                    android:layout_width="170dp"
                    android:layout_height="70dp"
                    android:text="Button" />

                <Button
                    android:id="@+id/button4"
                    android:layout_gravity="left|top"
                    android:layout_width="170dp"
                    android:layout_height="70dp"
                    android:text="Button" />

            </GridLayout>
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
